# cpp-qt-pyqt-py

./: CMakeLists.txt  MainWindow.cpp  README.md  main.cpp  test.py
cpp-qt-pytqt-py/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
